--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -21,4 +21,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Ability.WeakenGravity10P",DevComment="")
 +GameplayTagList=(Tag="Ability.WeakenGravity50P",DevComment="")
 +GameplayTagList=(Tag="Ability.WhiteHole",DevComment="")
++GameplayTagList=(Tag="State.Dead",DevComment="")
++GameplayTagList=(Tag="State.Stun",DevComment="")
++GameplayTagList=(Tag="State.WindUp",DevComment="")
 
