플레이어 머리 밟기, 플레이어 캡슐 사이즈 DataAsset에서 조절 가능하게.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=ChronoSpace
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/02_Map/L_StageSize.L_StageSize
-GameDefaultMap=/Game/02_Map/L_StageSize.L_StageSize
+EditorStartupMap=/Game/02_Map/L_Gym.L_Gym
+GameDefaultMap=/Game/02_Map/L_Gym.L_Gym
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
@@ -140,6 +140,7 @@ NetConnectionClassName=OnlineSubsystemSteam.SteamNetConnection
 +Profiles=(Name="CSCapsule",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="Pawn",CustomResponses=((Channel="Destructible",Response=ECR_Ignore),(Channel="CSAction")),HelpMessage="Needs description")
 +Profiles=(Name="CSTrigger",CollisionEnabled=QueryOnly,bCanModify=True,ObjectTypeName="",CustomResponses=((Channel="WorldStatic",Response=ECR_Ignore),(Channel="WorldDynamic",Response=ECR_Ignore),(Channel="Pawn",Response=ECR_Overlap),(Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore)),HelpMessage="Needs description")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel1,DefaultResponse=ECR_Ignore,bTraceType=True,bStaticObject=False,Name="CSAction")
++DefaultChannelResponses=(Channel=ECC_GameTraceChannel2,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="Player")
 -ProfileRedirects=(OldName="BlockingVolume",NewName="InvisibleWall")
 -ProfileRedirects=(OldName="InterpActor",NewName="IgnoreOnlyPawn")
 -ProfileRedirects=(OldName="StaticMeshComponent",NewName="BlockAllDynamic")
