--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -8,7 +8,7 @@ TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/05_ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode_C
+GlobalDefaultGameMode=/Game/01_Blueprint/Game/BP_CSGameMode.BP_CSGameMode_C
 GlobalDefaultServerGameMode=None
 GameInstanceClass=/Game/Blueprint/Game/BP_GameInstance.BP_GameInstance_C
 
