--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,6 @@ Plugins/*/Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
+
+!Plugins/EOSIntegrationKit-Version5/Source/ThirdParty/EIKSDK/
+!Plugins/EOSIntegrationKit-Version5/Source/ThirdParty/EIKSDK/**
