--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=ChronoSpace
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/02_Map/L_StageSize.L_StageSize
-GameDefaultMap=/Game/02_Map/L_StageSize.L_StageSize
+EditorStartupMap=/Game/02_Map/L_MatchMaking.L_MatchMaking
+GameDefaultMap=/Game/02_Map/L_MatchMaking.L_MatchMaking
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
