--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,7 +10,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GlobalDefaultGameMode=/Game/05_ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode_C
 GlobalDefaultServerGameMode=None
-GameInstanceClass=/Game/Blueprint/Game/BP_GameInstance.BP_GameInstance_C
+GameInstanceClass=/Game/01_Blueprint/Game/BP_CSGameInstance.BP_CSGameInstance_C
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
