--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -13,6 +13,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Ability.AbilityPreview",DevComment="")
 +GameplayTagList=(Tag="Ability.BlackHole",DevComment="")
 +GameplayTagList=(Tag="Ability.ChronoControl",DevComment="")
++GameplayTagList=(Tag="Ability.Movement",DevComment="")
 +GameplayTagList=(Tag="Ability.ReverseGravity",DevComment="")
 +GameplayTagList=(Tag="Ability.Scale.Large",DevComment="")
 +GameplayTagList=(Tag="Ability.Scale.Normal",DevComment="")
