문제 있는 세팅 주석 처리

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -71,7 +71,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPersonBP",NewGameName="/Script/ChronoSpace")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPerson",NewGameName="/Script/ChronoSpace")
 +ActiveGameNameRedirects=(OldGameName="TP_ThirdPerson",NewGameName="/Script/ChronoSpace")
-GameSingletonClassName=/Game/Blueprint/Game/BP_GameInstance.BP_GameInstance_C
+;GameSingletonClassName=/Game/Blueprint/Game/BP_GameInstance.BP_GameInstance_C
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
@@ -165,7 +165,7 @@ NetConnectionClassName=OnlineSubsystemSteam.SteamNetConnection
 [OnlineSubsystemEIK]
 bEnabled=true
 bShouldCreateDeviceId=true
-bAutoLogin=true
+;bAutoLogin=true
 
 ;EIK Comment: You do not need to worry about this setting as we dynamically set it in Travel URL depending upon if we are using Listen Server or Dedicated Server
 
@@ -178,7 +178,7 @@ bAutomaticallySetupEIK=True
 bAutoLaunchDevTool=False
 OrganizationName=Gravitia
 ProductName=ChronoSpace
-AutoLoginType=AutoLogin_DeviceID
+;AutoLoginType=AutoLogin_DeviceID
 FallbackForAutoLoginType=Fallback_None
 bUse_EAS_ForAutoLogin=False
 DeveloperToolUrl=localhost:6300
@@ -218,4 +218,5 @@ OneClick_AppLaunchOverride=
 OneClick_BuildVersionOverride=
 OneClick_AppArgsOverride=
 OneClick_BuildRootOverride=
+AutoLoginType=AutoLogin_None
 
