--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -72,6 +72,16 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPerson",NewGameName="/Script/ChronoSpace")
 +ActiveGameNameRedirects=(OldGameName="TP_ThirdPerson",NewGameName="/Script/ChronoSpace")
 ;GameSingletonClassName=/Game/Blueprint/Game/BP_GameInstance.BP_GameInstance_C
++NetDriverDefinitions=(
+    DefName="GameNetDriver",
+    DriverClassName="/Script/OnlineSubsystemEIK.NetDriverEIK",
+    DriverClassNameFallback="/Script/OnlineSubsystemUtils.IpNetDriver"
+)
++NetDriverDefinitions=(
+    DefName="PendingNetDriver",
+    DriverClassName="/Script/OnlineSubsystemEIK.NetDriverEIK",
+    DriverClassNameFallback="/Script/OnlineSubsystemUtils.IpNetDriver"
+)
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
@@ -87,17 +97,19 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
-#[/Script/Engine.GameEngine]
-#+NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="OnlineSubsystemSteam.SteamNetDriver",DriverClassNameFallback="OnlineSubsystemUtils.IpNetDriver")
+;[/Script/Engine.GameEngine]
+;NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="OnlineSubsystemSteam.SteamNetDriver",DriverClassNameFallback="OnlineSubsystemUtils.IpNetDriver")
+;NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="OnlineSubsystemEIK.NetDriverEIK",DriverClassNameFallback="OnlineSubsystemUtils.IpNetDriver")
+;NetDriverDefinitions=(DefName="PendingNetDriver",DriverClassName="OnlineSubsystemEIK.NetDriverEIK", DriverClassNameFallback="OnlineSubsystemUtils.IpNetDriver")
 
 [OnlineSubsystem]
 DefaultPlatformService=EIK
-#DefaultPlatformService=EOS
+;DefaultPlatformService=EOS
 
 
-#[OnlineSubsystemSteam]
-#bEnabled=true
-#SteamDevAppId=480
+;[OnlineSubsystemSteam]
+;bEnabled=true
+;SteamDevAppId=480
 
 [/Script/OnlineSubsystemSteam.SteamNetDriver]
 NetConnectionClassName=OnlineSubsystemSteam.SteamNetConnection
