--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -100,6 +100,7 @@ bSkipMovies=False
 +IniSectionDenylist=/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings
 +MapsToCook=(FilePath="/Game/02_Map/L_MatchMaking")
 +MapsToCook=(FilePath="/Game/02_Map/L_StageSize")
++MapsToCook=(FilePath="/Game/02_Map/L_Main")
 +DirectoriesToAlwaysCook=(Path="/NNEDenoiser")
 bRetainStagedDirectory=False
 CustomStageCopyHandler=
