--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -230,5 +230,5 @@ OneClick_AppLaunchOverride=
 OneClick_BuildVersionOverride=
 OneClick_AppArgsOverride=
 OneClick_BuildRootOverride=
-AutoLoginType=AutoLogin_None
+;AutoLoginType=AutoLogin_None
 
