--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,13 +2,13 @@
 GameName=ChronoSpace
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/02_Map/L_MatchMaking.L_MatchMaking
-GameDefaultMap=/Game/02_Map/L_MatchMaking.L_MatchMaking
+EditorStartupMap=/Game/02_Map/L_Gym.L_Gym
+GameDefaultMap=/Game/02_Map/L_Gym.L_Gym
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/05_ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode_C
+GlobalDefaultGameMode=/Game/01_Blueprint/Game/BP_CSGameMode.BP_CSGameMode_C
 GlobalDefaultServerGameMode=None
 GameInstanceClass=/Game/01_Blueprint/Game/BP_CSGameInstance.BP_CSGameInstance_C
 
@@ -71,17 +71,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPersonBP",NewGameName="/Script/ChronoSpace")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPerson",NewGameName="/Script/ChronoSpace")
 +ActiveGameNameRedirects=(OldGameName="TP_ThirdPerson",NewGameName="/Script/ChronoSpace")
-;GameSingletonClassName=/Game/Blueprint/Game/BP_GameInstance.BP_GameInstance_C
-+NetDriverDefinitions=(
-    DefName="GameNetDriver",
-    DriverClassName="/Script/OnlineSubsystemEIK.NetDriverEIK",
-    DriverClassNameFallback="/Script/OnlineSubsystemUtils.IpNetDriver"
-)
-+NetDriverDefinitions=(
-    DefName="PendingNetDriver",
-    DriverClassName="/Script/OnlineSubsystemEIK.NetDriverEIK",
-    DriverClassNameFallback="/Script/OnlineSubsystemUtils.IpNetDriver"
-)
+GameSingletonClassName=/Game/Blueprint/Game/BP_GameInstance.BP_GameInstance_C
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
@@ -97,19 +87,15 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
-;[/Script/Engine.GameEngine]
-;NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="OnlineSubsystemSteam.SteamNetDriver",DriverClassNameFallback="OnlineSubsystemUtils.IpNetDriver")
-;NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="OnlineSubsystemEIK.NetDriverEIK",DriverClassNameFallback="OnlineSubsystemUtils.IpNetDriver")
-;NetDriverDefinitions=(DefName="PendingNetDriver",DriverClassName="OnlineSubsystemEIK.NetDriverEIK", DriverClassNameFallback="OnlineSubsystemUtils.IpNetDriver")
+[/Script/Engine.GameEngine]
++NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="OnlineSubsystemSteam.SteamNetDriver",DriverClassNameFallback="OnlineSubsystemUtils.IpNetDriver")
 
 [OnlineSubsystem]
 DefaultPlatformService=EIK
-;DefaultPlatformService=EOS
 
-
-;[OnlineSubsystemSteam]
-;bEnabled=true
-;SteamDevAppId=480
+[OnlineSubsystemSteam]
+bEnabled=true
+SteamDevAppId=480
 
 [/Script/OnlineSubsystemSteam.SteamNetDriver]
 NetConnectionClassName=OnlineSubsystemSteam.SteamNetConnection
@@ -154,6 +140,7 @@ NetConnectionClassName=OnlineSubsystemSteam.SteamNetConnection
 +Profiles=(Name="CSCapsule",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="Pawn",CustomResponses=((Channel="Destructible",Response=ECR_Ignore),(Channel="CSAction")),HelpMessage="Needs description")
 +Profiles=(Name="CSTrigger",CollisionEnabled=QueryOnly,bCanModify=True,ObjectTypeName="",CustomResponses=((Channel="WorldStatic",Response=ECR_Ignore),(Channel="WorldDynamic",Response=ECR_Ignore),(Channel="Pawn",Response=ECR_Overlap),(Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore)),HelpMessage="Needs description")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel1,DefaultResponse=ECR_Ignore,bTraceType=True,bStaticObject=False,Name="CSAction")
++DefaultChannelResponses=(Channel=ECC_GameTraceChannel2,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="Player")
 -ProfileRedirects=(OldName="BlockingVolume",NewName="InvisibleWall")
 -ProfileRedirects=(OldName="InterpActor",NewName="IgnoreOnlyPawn")
 -ProfileRedirects=(OldName="StaticMeshComponent",NewName="BlockAllDynamic")
@@ -173,11 +160,8 @@ NetConnectionClassName=OnlineSubsystemSteam.SteamNetConnection
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
-
 [OnlineSubsystemEIK]
 bEnabled=true
-bShouldCreateDeviceId=true
-;bAutoLogin=true
 
 ;EIK Comment: You do not need to worry about this setting as we dynamically set it in Travel URL depending upon if we are using Listen Server or Dedicated Server
 
@@ -190,7 +174,7 @@ bAutomaticallySetupEIK=True
 bAutoLaunchDevTool=False
 OrganizationName=Gravitia
 ProductName=ChronoSpace
-;AutoLoginType=AutoLogin_DeviceID
+AutoLoginType=AutoLogin_None
 FallbackForAutoLoginType=Fallback_None
 bUse_EAS_ForAutoLogin=False
 DeveloperToolUrl=localhost:6300
@@ -230,5 +214,4 @@ OneClick_AppLaunchOverride=
 OneClick_BuildVersionOverride=
 OneClick_AppArgsOverride=
 OneClick_BuildRootOverride=
-;AutoLoginType=AutoLogin_None
 
