eos lobby level, change gamemode

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,13 +2,13 @@
 GameName=ChronoSpace
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/02_Map/L_Gym.L_Gym
-GameDefaultMap=/Game/02_Map/L_Gym.L_Gym
+EditorStartupMap=/Game/02_Map/L_EOSLobby.L_EOSLobby
+GameDefaultMap=/Game/02_Map/L_EOSLobby.L_EOSLobby
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/01_Blueprint/Game/BP_CSGameMode.BP_CSGameMode_C
+GlobalDefaultGameMode=/Script/OnlineSubsystemEIK.EIK_BaseGameMode
 GlobalDefaultServerGameMode=None
 GameInstanceClass=/Game/01_Blueprint/Game/BP_CSGameInstance.BP_CSGameInstance_C
 
@@ -88,7 +88,9 @@ bUseManualIPAddress=False
 ManualIPAddress=
 
 [/Script/Engine.GameEngine]
-+NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="OnlineSubsystemSteam.SteamNetDriver",DriverClassNameFallback="OnlineSubsystemUtils.IpNetDriver")
++NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="OnlineSubsystemEOS.EOSNetDriver",DriverClassNameFallback="OnlineSubsystemUtils.IpNetDriver")
+;+NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="OnlineSubsystemSteam.SteamNetDriver",DriverClassNameFallback="OnlineSubsystemUtils.IpNetDriver")
+
 
 [OnlineSubsystem]
 DefaultPlatformService=EIK
