--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -88,6 +88,7 @@ bUseManualIPAddress=False
 ManualIPAddress=
 
 [/Script/Engine.GameEngine]
+!NetDriverDefinitions=ClearArray
 +NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="OnlineSubsystemEIK.NetDriverEIK",DriverClassNameFallback="OnlineSubsystemUtils.IpNetDriver")
 ;+NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="OnlineSubsystemEOS.EOSNetDriver",DriverClassNameFallback="OnlineSubsystemUtils.IpNetDriver")
 ;+NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="OnlineSubsystemSteam.SteamNetDriver",DriverClassNameFallback="OnlineSubsystemUtils.IpNetDriver")
