--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -97,12 +97,12 @@ ManualIPAddress=
 [OnlineSubsystem]
 DefaultPlatformService=EIK
 
-[OnlineSubsystemSteam]
-bEnabled=true
-SteamDevAppId=480
+;[OnlineSubsystemSteam]
+;bEnabled=true
+;SteamDevAppId=480
 
-[/Script/OnlineSubsystemSteam.SteamNetDriver]
-NetConnectionClassName=OnlineSubsystemSteam.SteamNetConnection
+;[/Script/OnlineSubsystemSteam.SteamNetDriver]
+;NetConnectionClassName=OnlineSubsystemSteam.SteamNetConnection
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
