Change Standalone Game, Blueprint little Change

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -101,6 +101,7 @@ bSkipMovies=False
 +MapsToCook=(FilePath="/Game/02_Map/L_MatchMaking")
 +MapsToCook=(FilePath="/Game/02_Map/L_StageSize")
 +MapsToCook=(FilePath="/Game/02_Map/L_Main")
++MapsToCook=(FilePath="/Game/02_Map/L_EOSLobby")
 +DirectoriesToAlwaysCook=(Path="/NNEDenoiser")
 bRetainStagedDirectory=False
 CustomStageCopyHandler=
